--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     pictures, graphics and video clips!
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="https://docs.google.com/document/d/1wABgp0dX8XaMmmwp3mI2pOQ3PvDRrmWd965B0HvssyA/edit?usp=sharing" class="main-btn">
                         <span class="btn-text">Download CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
@@ -53,7 +53,7 @@
                         who loves to work on making my products look well. Working on the web is my passion as I love to work on exciting projects.
                     </p>
                     <div class="btn-con">
-                        <a href="#" class="main-btn">
+                        <a href="https://docs.google.com/document/d/1wABgp0dX8XaMmmwp3mI2pOQ3PvDRrmWd965B0HvssyA/edit?usp=sharing" class="main-btn">
                             <span class="btn-text">Download CV</span>
                             <span class="btn-icon"><i class="fas fa-download"></i></span>
                         </a>
