--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/logowhite.png" alt="">
+                        <img src="img/port15.png" alt="">
                     </div>
                     <div class="hover-items">
                         
@@ -308,7 +308,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/4804969[Recovered].png" alt="">
+                        <img src="img/420.png" alt="">
                     </div>
                     <div class="hover-items">
                        
