--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/logoblack.png" alt="">
+                        <img src="img/BJ.png" alt="">
                     </div>
                     <div class="hover-items">
                        
