--- a/index.html
+++ b/index.html
@@ -556,6 +556,11 @@
                 </div>
             </div>
         </section>
+        <section class="container">
+            <div class="main-title">
+                    <h2>Designed by: The Motif Hive &trade | &copy2023 All Rights Reserved </h2>
+                </div>
+        </section>
     </main>
 
     <div class="controls">
