--- a/index.html
+++ b/index.html
@@ -555,7 +555,9 @@
                     </div>
                     
                 </div>
-                <h2>Designed by: The Motif Hive &trade | &copy2023 All Rights Reserved </h2>
+                <div style="padding-top: 50px, text-align: center">
+                <h2>Designed by: The Motif Hive | &copy2023 All Rights Reserved </h2>
+                </div>
             </div>
         </section>
     </main>
