--- a/index.html
+++ b/index.html
@@ -555,11 +555,12 @@
                     </div>
                     
                 </div>
-                <div style="padding-top: 50px, text-align: center">
-                <h2>Designed by: The Motif Hive | &copy2023 All Rights Reserved </h2>
-                </div>
+                
             </div>
         </section>
+        <div class="footer">
+        <h2>Designed by: The Motif Hive | &copy2023 All Rights Reserved </h2>
+        </div>
     </main>
 
     <div class="controls">
